--- a/pom.xml
+++ b/pom.xml
@@ -181,5 +181,55 @@
                 </plugins>
             </build>
         </profile>
+        
+        <!-- Central Portal token-based publishing (no GPG, no staging) -->
+        <profile>
+            <id>central</id>
+            <distributionManagement>
+                <repository>
+                    <!-- Must match ~/.m2/settings.xml <server id> for credentials -->
+                    <id>central</id>
+                    <url>https://central.sonatype.com/api/v1/publisher/deploy/maven2</url>
+                </repository>
+            </distributionManagement>
+            <build>
+                <plugins>
+                    <!-- Sonatype Central Publishing plugin (token-based, no GPG) -->
+                    <plugin>
+                        <groupId>org.sonatype.central</groupId>
+                        <artifactId>central-publishing-maven-plugin</artifactId>
+                        <version>0.5.0</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <!-- Reference credentials by server id in ~/.m2/settings.xml -->
+                            <publishingServerId>central</publishingServerId>
+                        </configuration>
+                    </plugin>
+
+                    <!-- Local signing to satisfy Central validation when managed signing is unavailable -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>${gpg.plugin.version}</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                                <configuration>
+                                    <!-- Allow non-interactive passphrase entry -->
+                                    <gpgArguments>
+                                        <arg>--pinentry-mode</arg>
+                                        <arg>loopback</arg>
+                                    </gpgArguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 </project>
